operators/airlock-microgateway/5.0.6/manifests/airlock-microgateway-config_v1_configmap.yaml
apiVersion: v1
data:
  engine_bootstrap_config_template.yaml: |
    # Base configuration, admin interface on port 19000
    layered_runtime:
      layers:
        - name: static_layer
          static_layer:
            # disable the new JSON formatter as it is not omitting empty fields
            # see https://github.com/envoyproxy/envoy/issues/37941
            envoy.reloadable_features.logging_with_fast_json_formatter: false
            # increase the maximum RE2 program size to support larger regex patterns used in CRs and built-in log masking
            re2.max_program_size.error_level: 8192
    admin:
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 19000
    dynamic_resources:
      ads_config:
        api_type: GRPC
        transport_api_version: V3
        grpc_services:
          - envoy_grpc:
              cluster_name: xds_cluster
        set_node_on_first_message_only: true
        # Prevent Envoy Node from overloading the xDS server due to rejected configuration when using xDS SotW gRPC
        rate_limit_settings:
          max_tokens: 100
          fill_rate: 30
      cds_config:
        resource_api_version: V3
        initial_fetch_timeout: 10s
        ads: {}
      lds_config:
        resource_api_version: V3
        initial_fetch_timeout: 10s
        ads: {}
    static_resources:
      listeners:
      - name: probe
        stat_prefix: probe
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 19001
        filter_chains:
        - filters:
          - name: http_connection_manager
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: probe
              codec_type: AUTO
              http2_protocol_options:
                initial_connection_window_size: 1048576
                initial_stream_window_size: 65536
                max_concurrent_streams: 100
              route_config:
                name: probe
                virtual_hosts:
                - name: probe
                  domains:
                  - '*'
                  routes:
                  - name: ready
                    match:
                      path: /ready
                      headers:
                      - name: ':method'
                        string_match:
                          exact: 'GET'
                    route:
                      cluster: airlock_microgateway_engine_admin
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      - name: metrics
        stat_prefix: metrics
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 19002
        filter_chains:
          - filters:
              - name: http_connection_manager
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                  stat_prefix: metrics
                  codec_type: AUTO
                  http2_protocol_options:
                    initial_connection_window_size: 1048576
                    initial_stream_window_size: 65536
                    max_concurrent_streams: 100
                  route_config:
                    name: metrics
                    virtual_hosts:
                      - name: metrics
                        domains:
                          - '*'
                        routes:
                          - name: metrics
                            match:
                              path: /metrics
                              headers:
                                - name: ':method'
                                  string_match:
                                    exact: 'GET'
                            route:
                              prefix_rewrite: '/stats/prometheus'
                              cluster: airlock_microgateway_engine_admin
                  http_filters:
                    - name: envoy.filters.http.router
                      typed_config:
                        '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      clusters:
      - name: xds_cluster
        health_checks:
        - timeout: 2s
          interval: 5s
          interval_jitter_percent: 10
          unhealthy_threshold: 1
          healthy_threshold: 1
          reuse_connection: true
          http_health_check:
            path: /leader
          transport_socket_match_criteria:
            tls: false
        outlier_detection:
          consecutive_5xx: 2
          max_ejection_percent: 100
        common_lb_config:
          ignore_new_hosts_until_first_hc: true
          healthy_panic_threshold:
            value: 0.0
        cluster_type:
          name: envoy.clusters.dns
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.clusters.dns.v3.DnsCluster
            all_addresses_in_single_endpoint: false
            respect_dns_ttl: true
        connect_timeout: 1s
        load_assignment:
          cluster_name: xds_cluster
          endpoints:
          - lb_endpoints:
            - endpoint:
                health_check_config:
                  port_value: 8082
                address:
                  socket_address:
                    address: airlock-microgateway-operator-xds-headless.$(OPERATOR_NAMESPACE).svc.cluster.local
                    port_value: 13377
        typed_extension_protocol_options:
          envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
            '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
            explicit_http_config:
              http2_protocol_options:
                connection_keepalive:
                  interval: 360s
                  timeout: 5s
        transport_socket_matches:
        - name: "plaintext"
          match: { tls: false }
          transport_socket:
            name: envoy.transport_sockets.raw_buffer
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer
        - name: "tls"
          match: {}
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
              common_tls_context:
                tls_params:
                  tls_minimum_protocol_version: TLSv1_3
                  tls_maximum_protocol_version: TLSv1_3
                validation_context_sds_secret_config:
                  name: validation_context_sds
                  sds_config:
                    resource_api_version: V3
                    path_config_source:
                      path: /app/config/validation_context_sds_secret.yaml
                      watched_directory:
                        path: /app/config/
                tls_certificate_sds_secret_configs:
                - name: tls_certificate_sds
                  sds_config:
                    resource_api_version: V3
                    path_config_source:
                      path: /app/config/tls_certificate_sds_secret.yaml
                      watched_directory:
                        path: /app/config/
      - name: airlock_microgateway_engine_admin
        connect_timeout: 1s
        type: STATIC
        load_assignment:
          cluster_name: airlock_microgateway_engine_admin
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: 127.0.0.1
                    port_value: 19000
        typed_extension_protocol_options:
          envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
            '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
            explicit_http_config:
              http2_protocol_options:
                connection_keepalive:
                  interval: 360s
                  timeout: 5s
    stats_config:
      stats_tags:
        - tag_name: "block_type"
          regex: "\\.(block_type\\.([^.]+))"
        - tag_name: "block_subtype"
          regex: "\\.(block_subtype\\.([^.]+))"
        - tag_name: "envoy_cluster_name"
          regex: "\\.(cluster\\.([^.]+))"
        - tag_name: "upstream"
          regex: "\\.(cluster\\.upstream_(\\d+))"
        - tag_name: "upstream"
          regex: "^cluster\\.(upstream_(\\d+))"
        - tag_name: "upstream"
          regex: "\\.(cluster\\.httproute/([^.]+)/rule/[^.]+)"
        - tag_name: "upstream"
          regex: "^cluster\\.(httproute/([^.]+)/rule/[^.]+)"
        - tag_name: "token_exchange_cluster_name"
          regex: "\\.(token_exchange_cluster_name\\.([^.]+))"
        - tag_name: "icap_cluster_name"
          regex: "\\.(icap_cluster_name\\.([^.]+))"
        - tag_name: "policy"
          regex: "\\.(policy\\.([^.]+))"
        - tag_name: "result"
          regex: "\\.(result\\.([^.]+))"
        - tag_name: "request"
          regex: "\\.(request\\.([^.]+))"
        - tag_name: "authentication_method"
          regex: "\\.(authentication_method\\.([^.]+))"
        - tag_name: "fail_open"
          regex: "\\.(fail_open\\.([^.]+))"
        - tag_name: "authorized"
          regex: "\\.(authorized\\.([^.]+))"
        - tag_name: "back_channel_cluster_name"
          regex: "\\.(back_channel_cluster_name\\.([^.]+))"
      use_all_default_tags: true
    overload_manager:
      resource_monitors:
      - name: "envoy.resource_monitors.global_downstream_max_connections"
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.resource_monitors.downstream_connections.v3.DownstreamConnectionsConfig
          max_active_downstream_connections: 50000
    bootstrap_extensions:
      - name: airlock.bootstrap.engine_stats
        typed_config:
          '@type': type.googleapis.com/airlock.extensions.bootstrap.stats.v1alpha.Stats
    application_log_config:
      log_format:
        text_format: '{"@timestamp":"%Y-%m-%dT%T.%e%z","log":{"logger":"%n","level":"%l","origin":{"file":{"name":"%g","line":%#},"function":"%!"}},"event":{"module":"envoy","dataset":"envoy.application"},"process":{"pid":%P,"thread":{"id":%t}},"ecs":{"version":"8.5"},"message":"%j"}'
kind: ConfigMap
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: airlock-microgateway
    app.kubernetes.io/name: microgateway-operator
    app.kubernetes.io/part-of: microgateway
    app.kubernetes.io/version: 5.0.6
  name: airlock-microgateway-config
